--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,14 @@
 body {
   margin: 0;
   padding: 0;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
 }
 
-.hero-page{
-    height: 100vh;
-    background-color: rgb(250,247,255);
+.hero-page {
+  height: 100vh;
+  background-color: rgb(250, 247, 255);
 }
 
 /* Nanbar */
@@ -14,7 +17,7 @@ nav {
   padding: 10px;
   align-items: center;
   justify-content: center;
-  background-color: rgb(134,133,239);
+  background-color: rgb(134, 133, 239);
   img {
     height: 50px;
     position: absolute;
@@ -30,7 +33,7 @@ nav {
     li {
       a {
         text-decoration: none;
-        color: rgb(250,247,255);
+        color: rgb(250, 247, 255);
       }
     }
   }
@@ -40,7 +43,8 @@ nav {
   margin-top: 50px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  /* justify-content: space-around; */
   .left__aside {
     display: flex;
     justify-content: center;
@@ -48,34 +52,139 @@ nav {
     padding: 20px 10px;
     img {
       height: 350px;
+      position: relative;
+    }
+    img::before {
+      content: "fish";
+      background-color: blue;
+      width: 100px;
+      height: 100px;
+      position: absolute;
+      top: 0;
+      left: 0;
     }
   }
   .right__aside {
     padding: 10px;
     h1 {
-        font-family: 'Leckerli One';
-        font-size: 50px;
-        max-width: 400px;
-        line-height: 60px;
-        margin-bottom: 60px;
-        color: rgb(134,133,239);
+      font-family: "Leckerli One";
+      font-size: 50px;
+      max-width: 400px;
+      line-height: 60px;
+      margin-bottom: 60px;
+      color: rgb(134, 133, 239);
     }
     p {
-        font-family: 'Poppins';
-        font-size: 14px;
-        max-width: 500px;
-        line-height: 20px;
-        margin-top: -30px;
+      font-family: "Poppins";
+      font-size: 14px;
+      max-width: 500px;
+      line-height: 20px;
+      margin-top: -30px;
     }
     button {
-        border: none;
-        color: white;
-        background-color: rgb(134,133,239);
-        margin-top: 25px;
-        font-size: 16px;
-        padding: 15px 150px;
-        border-radius: 10px;
-        box-shadow: 5px 5px 10px 5px grey;
+      border: none;
+      color: white;
+      background-color: rgb(134, 133, 239);
+      margin-top: 25px;
+      font-size: 16px;
+      padding: 15px 150px;
+      border-radius: 10px;
+      box-shadow: 5px 5px 10px 5px grey;
     }
+  }
+}
+
+.about__page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-family: "Mochiy Pop One";
+  background-color: rgb(250, 247, 255);
+  .about-intro-text {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    .one {
+      max-width: 300px;
+      margin-right: 30px;
+      color: rgb(134, 133, 239);
+    }
+    .two {
+      max-width: 300px;
+    }
+    .two__one {
+      margin-bottom: 50px;
+      color: rgb(190, 187, 206);
+    }
+  }
+  .long-image {
+    height: 100px;
+    width: 100%;
+  }
+  .about__body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .box-one {
+      background-color: rgb(134, 133, 239);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      gap: 50px;
+      .reliant__text{
+        max-width: 400px;
+      }
+      img {
+        height: 200px;
+      }
+    }
+    .box-two{
+      background-color: rgb(250, 247, 255);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      gap: 50px;
+      .unique__text{
+        max-width: 700px;
+      }
+      img {
+        height: 200px;
+      }
+    }
+    .box-three{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      position: relative;
+      .creative__text{
+        text-align: center;
+        max-width: 500px;
+        z-index: 2;
+      }
+      img{
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        z-index: 1;
+      }
+    }
+    .ending__text{
+      text-align: center;
+      padding: 50px;
+    }
+  }
+}
+
+.about__footer{
+  display: flex;
+  padding: 20px;
+  gap: 50px;
+  i{
+    font-size: 20px;
   }
 }
